--- a/loop_web/Loop/package.json
+++ b/loop_web/Loop/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "ali-oss": "^6.22.0",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
+    "base-64": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
@@ -22,7 +25,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/ali-oss": "^6.16.11",
     "@types/axios": "^0.14.4",
+    "@types/base-64": "^1.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
