--- a/loop_web/Loop/package.json
+++ b/loop_web/Loop/package.json
@@ -21,10 +21,12 @@
     "mobx": "^6.13.7",
     "mobx-persist-store": "^1.1.8",
     "mobx-react-lite": "^4.1.0",
+    "pinyin": "^4.0.0-alpha.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "sass": "^1.86.0"
+    "sass": "^1.86.0",
+    "segmentit": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -33,6 +35,7 @@
     "@types/base-64": "^1.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
+    "@types/pinyin": "^2.10.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
