--- a/loop_web/Loop/package.json
+++ b/loop_web/Loop/package.json
@@ -24,6 +24,7 @@
     "pinyin": "^4.0.0-alpha.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-native-webrtc": "^124.0.5",
     "react-router-dom": "^7.4.1",
     "sass": "^1.86.0",
     "segmentit": "^2.0.3",
