--- a/loop_web/package.json
+++ b/loop_web/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "ali-oss": "^6.22.0",
     "antd": "^5.24.5",
